manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  # Configuration pour le TLS
  # tls:
  #   - secretName: fastapi-selfsigned-secret
  #     hosts:
  #       - app1.meca.cloudns.ch
  # Règles d'acheminement du trafic
  rules:
  # Règle pour l'hôte app1.meca.cloudns.ch
  - host: app1.meca.cloudns.ch
    http:
      paths:
        # Chemin pour les requêtes concernant les films
        - path: /api/v1/movies
          pathType: Prefix
          backend:
             service:
              name: fastapi-movie-service
              port:
                number: 8000
        # Chemin pour les requêtes concernant les acteurs
        - path: /api/v1/casts
          pathType: Prefix
          backend:
             service:
              name: fastapi-cast-service
              port:
                number: 8000
